-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 25
-
Component/s: hotspot
-
b26
-
ppc, riscv
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8359379 | 21.0.9 | Martin Doerr | P4 | Resolved | Fixed | b01 |
The way that ZPlatformAddressOffsetBits is implemented on riscv and ppc may result in a return value of 45. This is larger than the max supported value of 44 (because of other internal data structures). This was fixed in JDK-8330275 for aarch64.
BeforeJDK-8350441 the issue on manifested if one tried to select a heap larger than 16 TB (not supported), but after JDK-8350441 we try to double the heap address space when running on a NUMA machine. So we may now encounter this bug for heaps larger than 8TB (which is supported).
While ZPlatformAddressOffsetBits needs an overhaul. (It was written for non-generational ZGC where we had the three color bits inside the address.) The proposal is that we solve this for ppc and riscv by doing the same thing we did for aarch64 inJDK-8330275
Before
While ZPlatformAddressOffsetBits needs an overhaul. (It was written for non-generational ZGC where we had the three color bits inside the address.) The proposal is that we solve this for ppc and riscv by doing the same thing we did for aarch64 in
- backported by
-
JDK-8359379 ZGC: riscv, ppc ZPlatformAddressOffsetBits may return a too large value
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/293f8113
-
Commit(master)
openjdk/jdk/46183742
-
Review(master)
openjdk/jdk21u-dev/1845
-
Review(master)
openjdk/jdk/25578