8358310: ZGC: riscv, ppc ZPlatformAddressOffsetBits may return a too large value

Reviewed-by: fyang
Backport-of: 4618374269e8636c772d921ad0c2c2d9e5e3e643